; ModuleID = '/home/carl/AnghaBench/linux/fs/overlayfs/extr_util.c_ovl_has_upperdata.c'
source_filename = "/home/carl/AnghaBench/linux/fs/overlayfs/extr_util.c_ovl_has_upperdata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }

@OVL_UPPERDATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ovl_has_upperdata(%struct.inode* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.inode*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  %4 = load %struct.inode*, %struct.inode** %3, align 8
  %5 = call i32 @ovl_should_check_upperdata(%struct.inode* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %16

8:                                                ; preds = %1
  %9 = load i32, i32* @OVL_UPPERDATA, align 4
  %10 = load %struct.inode*, %struct.inode** %3, align 8
  %11 = call i32 @ovl_test_flag(i32 %9, %struct.inode* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %16

14:                                               ; preds = %8
  %15 = call i32 (...) @smp_rmb()
  store i32 1, i32* %2, align 4
  br label %16

16:                                               ; preds = %14, %13, %7
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @ovl_should_check_upperdata(%struct.inode*) #1

declare dso_local i32 @ovl_test_flag(i32, %struct.inode*) #1

declare dso_local i32 @smp_rmb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
